--- a/tic-tac-toe.css
+++ b/tic-tac-toe.css
@@ -83,6 +83,7 @@ body{
     font-size: 1.225em;
     font-weight: 500;
     position: absolute;
+    text-wrap: nowrap
     top: 60px;
     text-align: left;
     z-index: 0;
@@ -209,7 +210,7 @@ body{
 
   .render-move{
     margin: 0 auto;
-    font-size: 1em;
+    font-size: 1.25em;
     font-weight: 500;
     width: max-content;
     z-index: 0;
